--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -164,8 +164,16 @@
                         <li>
                             <a class="treeview-item" href="{% url 'calendarapp:all_events' %}"><i class="icon fa fa-circle-o"></i> All</a>
                         </li>
+                        
                     </ul>
                 </li>
+                <li>
+                    <a class="app-menu__item" href="{% url 'calendarapp:orar' %}">
+                        <i class="app-menu__icon fa fa-clock-o"></i>
+                        <span class="app-menu__label">Orar</span>
+                    </a>
+                </li>
+                
                 <!-- <li>
                     <a class="app-menu__item" href="#"><i class="app-menu__icon fa fa-file-code-o"></i><span class="app-menu__label">Docs</span></a>
                 </li> -->
