added orar confirmat

--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -164,6 +164,8 @@
                         <li>
                             <a class="treeview-item" href="{% url 'calendarapp:all_events' %}"><i class="icon fa fa-circle-o"></i> All</a>
                         </li>
+                        <li><a href="{% url 'calendarapp:confirmed-schedule' %}">Orar Confirmat</a></li>
+
                         
                     </ul>
                 </li>
